--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://atkinsta.github.io/home-page/",
+  "homepage": "https://www.tyatkins.com",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.4.1",
